# grocery-ai-agent

./: DYNAMIC_IMPLEMENTATION_GUIDE.md  EXECUTIVE_SUMMARY.md  MODULE_REFERENCE.md  README.md  USER_FEEDBACK_HANDLING.md  pyproject.toml  run_e2e_tests.py  run_streamlit.py  test_cart.py  test_replanning_core.py
data/: grocery_agent.db  products.csv
scripts/: SETUP.md  setup.ps1  setup.sh  setup_linux.sh  setup_windows.bat
src/agents/: __init__.py  executor.py  observer.py  planner.py  replanner.py  super_agent.py
src/api/: __init__.py  vendor_api.py
src/core/: __init__.py  db.py  llm_engine.py  retry_utils.py
src/models/: __init__.py  api.py  cart.py  grocery_list.py  plan.py  product.py  state.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  memory_utils.py  test_utils.py  vendor_api_utils.py
