[project]
name = "agentic-app"
version = "0.1.0"
description = "Agentic AI application"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.127.0",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "requests==2.32.5",
    "langchain==1.2.0",
    "langchain-core==1.2.5",
    "langgraph==1.0.5",
    "ollama==0.6.1",
    "streamlit==1.52.2",
    "pandas==2.3.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]